@@ -1659,6 +1659,28 @@ operator|+
 name|CSV_ESCAPE
 argument_list|)
 expr_stmt|;
+comment|// if polyfield and no escape is provided, add "\\" escape by default
+if|if
+condition|(
+name|sf
+operator|.
+name|isPolyField
+argument_list|()
+condition|)
+block|{
+name|escape
+operator|=
+operator|(
+name|escape
+operator|==
+literal|null
+operator|)
+condition|?
+literal|"\\"
+else|:
+name|escape
+expr_stmt|;
+block|}
 name|CSVSharedBufPrinter
 name|csvPrinter
 init|=
@@ -2386,6 +2408,46 @@ name|next
 argument_list|()
 expr_stmt|;
 block|}
+comment|// if field is polyfield, use the multi-valued printer to apply appropriate escaping
+if|if
+condition|(
+name|csvField
+operator|.
+name|sf
+operator|!=
+literal|null
+operator|&&
+name|csvField
+operator|.
+name|sf
+operator|.
+name|isPolyField
+argument_list|()
+condition|)
+block|{
+name|mvWriter
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+name|csvField
+operator|.
+name|mvPrinter
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+name|CSVPrinter
+name|tmp
+init|=
+name|printer
+decl_stmt|;
+name|printer
+operator|=
+name|csvField
+operator|.
+name|mvPrinter
+expr_stmt|;
 name|writeVal
 argument_list|(
 name|csvField
@@ -2395,6 +2457,47 @@ argument_list|,
 name|val
 argument_list|)
 expr_stmt|;
+name|printer
+operator|=
+name|tmp
+expr_stmt|;
+name|mvWriter
+operator|.
+name|freeze
+argument_list|()
+expr_stmt|;
+name|printer
+operator|.
+name|print
+argument_list|(
+name|mvWriter
+operator|.
+name|getFrozenBuf
+argument_list|()
+argument_list|,
+literal|0
+argument_list|,
+name|mvWriter
+operator|.
+name|getFrozenSize
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|writeVal
+argument_list|(
+name|csvField
+operator|.
+name|name
+argument_list|,
+name|val
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 name|printer
