@@ -789,7 +789,7 @@ operator|.
 name|stringValue
 argument_list|()
 argument_list|,
-literal|false
+literal|true
 argument_list|)
 expr_stmt|;
 block|}
