@@ -251,6 +251,34 @@ argument_list|)
 expr_stmt|;
 name|assertU
 argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"4"
+argument_list|,
+literal|"amount_c"
+argument_list|,
+literal|"1.50,EUR"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"5"
+argument_list|,
+literal|"store"
+argument_list|,
+literal|"12.434,-134.1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
 name|commit
 argument_list|()
 argument_list|)
@@ -454,6 +482,66 @@ argument_list|,
 literal|"fl"
 argument_list|,
 literal|"id,v_ss,v2_ss"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// test csv field for polyfield (currency) SOLR-3959
+name|assertEquals
+argument_list|(
+literal|"4,\"1.50\\,EUR\"\n"
+argument_list|,
+name|h
+operator|.
+name|query
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:4"
+argument_list|,
+literal|"wt"
+argument_list|,
+literal|"csv"
+argument_list|,
+literal|"csv.header"
+argument_list|,
+literal|"false"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,amount_c"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// test csv field for polyfield (latlon) SOLR-3959
+name|assertEquals
+argument_list|(
+literal|"5,\"12.434\\,-134.1\"\n"
+argument_list|,
+name|h
+operator|.
+name|query
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"id:5"
+argument_list|,
+literal|"wt"
+argument_list|,
+literal|"csv"
+argument_list|,
+literal|"csv.header"
+argument_list|,
+literal|"false"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,store"
 argument_list|)
 argument_list|)
 argument_list|)
@@ -721,7 +809,7 @@ name|assertEquals
 argument_list|(
 name|sortHeader
 argument_list|(
-literal|"v_ss,foo_b,v2_ss,foo_f,foo_i,foo_d,foo_s,foo_dt,id,foo_l\n"
+literal|"amount_c,store,v_ss,foo_b,v2_ss,foo_f,foo_i,foo_d,foo_s,foo_dt,id,foo_l\n"
 argument_list|)
 argument_list|,
 name|sortHeader
